Bug 395845. Fix leak of static parser-node cache. Patch by mrbkap. r/sr=sicking